[OYS-63] - Fix extra scrollbar appearance for the case there are tabs in the entity browser

--- a/modules/openy_features/openy_media/css/browser.css
+++ b/modules/openy_features/openy_media/css/browser.css
@@ -15,6 +15,10 @@ nav.eb-tabs ul li.active a {
   background-color: #d6d6d6;
 }
 
+nav.eb-tabs ~ div .browser {
+  height: calc(100vh - 41px);
+}
+
 .view.eb-media .views-exposed-form {
   padding: 1.5em;
   background-color: #efefef;
